inggress/multiple_project/svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc1
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3000
  selector:
    app: ingress-svc1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-svc1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-svc1
  template:
    metadata:
      labels:
        app: ingress-svc1
    spec:
      containers:
      - name: ingress-svc1
        image: darmawan/k8scom_im1:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        command: ["node", "index.js"]
