inggress/multiple_project/svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc2
spec:
  type: NodePort
  ports:
    - port: 3002
      targetPort: 3000
  selector:
    app: ingress-svc2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-svc2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-svc2
  template:
    metadata:
      labels:
        app: ingress-svc2
    spec:
      containers:
      - name: ingress-svc2
        image: darmawan/k8scom_im2:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        command: ["node", "index.js"]
